# mindns

./: Cargo.toml  LICENSE  README.md
config/: mindns.toml
config/logs/: .gitkeep
config/rules/: default.rules
src/: main.rs  utils.rs
src/config/: mod.rs
src/dns/: mod.rs
src/logs/: dual_writer.rs  mod.rs
src/networking/: handler.rs  mod.rs  peer.rs  server.rs  udp_serv.rs
src/protocol/: byte_packet_buffer.rs  dns_header.rs  dns_packet.rs  dns_question.rs  dns_record.rs  mod.rs  query_type.rs  result_code.rs
src/rules/: mod.rs
